# efs5_docker-oss

./: .efs4.pids  .gitignore  =0.8.3  README.md  bankstatements copy 2.json  bankstatements copy.json  bankstatements.json  bankstatements1.json  bankstatements_3quotes .json  license
application_aggregate/: manage.py
client_app/: .gitignore  Dockerfile  Dockerfile.yml  docker-compose.yml  efs_financial_invoicedata.csv  populate_ledger.py  requirements.txt
efs_agents/: manage.py
efs_apis/: manage.py
efs_applications/: manage.py
efs_collections/: manage.py
efs_credit_decision/: manage.py
efs_crosssell/: manage.py
efs_data/: manage.py
efs_data_bankstatements/: manage.py
efs_data_bureau/: manage.py
efs_data_financial/: manage.py
efs_drawdowns/: manage.py
efs_events/: manage.py
efs_finance/: manage.py
efs_liquidity/: manage.py
efs_lms/: manage.py
efs_lms_asset_finance/: manage.py
efs_lms_invoice_finance/: manage.py
efs_lms_overdraft/: manage.py
efs_lms_scf/: manage.py
efs_lms_term_loan/: manage.py
efs_lms_trade_finance/: manage.py
efs_notifications/: manage.py  requirements.txt
efs_operations/: manage.py
efs_pnl/: manage.py
efs_profile/: manage.py
efs_risk/: manage.py
efs_shared_ui/: pyproject.toml
efs_shared_ui/efs_shared_ui/: apps.py  context_processors.py  urls.py  views.py
efs_shared_ui/efs_shared_ui.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
efs_shared_ui/efs_shared_ui/templates/efs_shared_ui/: _sidebar.html  base.backup.html  base.html  right_sidebar.html
efs_shared_ui/efs_shared_ui/templatetags/: nav.py
(+462 files in other folders)
